--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-fastify": "^8.2.2",
     "@prisma/client": "^3.5.0",
     "bcrypt": "^5.0.1",
+    "nanoid": "^3.1.30",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
